--- a/server/.env
+++ b/server/.env
@@ -4,7 +4,8 @@ JWT_SECRET=your_jwt_secret_key
 # Database Configuration (sesuaikan dengan pengaturan database MySQL-mu)
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=oop
+#bagian db password juga di ubah sesuai password masing"
+DB_PASSWORD=
 DB_NAME=finance_system
 
 # Port untuk server Express (opsional, bisa sesuaikan dengan port yang digunakan)
